# exiora-ai

./: .env.example  .gitignore  CONTRIBUTING.md  DEPLOYMENT_ALTERNATIVES.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_TROUBLESHOOTING.md  EMERGENCY_DEPLOYMENT.md  HACKATHON_SUMMARY.md  LICENSE  README.md  app.py  config.py  emergency_app.py  env.example  gea6_multimodal_chatbot.py  pyproject.toml  requirements-emergency.txt  requirements-minimal.txt  requirements-optimized.txt  requirements.txt  test_gea6_chatbot.py
assets/: dark_mode.css  light_mode.css
utils/: __init__.py  api_clients.py  speech_utils.py
